key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/generics-method/GenMethod.java
public class GenMethod {
    <T> T id(T x) { return x; }
    String f() { return id("hi"); }
}
